fix cross-browser scrollbars & shadow clipping

--- a/x-pack/plugins/lens/public/editor_frame_service/editor_frame/frame_layout.scss
+++ b/x-pack/plugins/lens/public/editor_frame_service/editor_frame/frame_layout.scss
@@ -106,11 +106,8 @@ a tilemap in an iframe: https://github.com/elastic/kibana/issues/16457 */
   }
 
   .lnsConfigPanel {
-    @include euiScrollBar;
-    padding: $euiSize $euiSizeXS $euiSizeXL $euiSize;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    padding-left: $euiFormMaxWidth + $euiSize;
+    @include euiYScroll;
+    padding: $euiSize $euiSize $euiSizeXL ($euiFormMaxWidth + $euiSize);
     margin-left: -$euiFormMaxWidth;
 
     @include euiBreakpoint('xs', 's', 'm') {
